# laarid_package_android-libhardware-legacy

./: .gitignore  Makefile.am  android-hardware-legacy-0.0.pc.in  configure.ac
debian/: README  README.Debian  README.source  changelog  control  copyright  watch
power/: Android.mk  power.c
qemu/: Android.mk
qemu_tracing/: Android.mk  qemu_tracing.c
uevent/: Android.mk
vibrator/: Android.mk
